--- a/nst_app/requirements_app.txt
+++ b/nst_app/requirements_app.txt
@@ -10,23 +10,36 @@ charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 efficientnet_pytorch==0.7.1
+filelock==3.12.2
+flatbuffers==25.2.10
 fsspec==2024.6.1
 gast==0.6.0
 gitdb==4.0.12
 GitPython==3.1.45
+gmpy2==2.1.2
 google-pasta==0.2.0
 grpcio==1.74.0
 h5py==3.14.0
+huggingface-hub==0.34.4
 idna==3.10
 Jinja2==3.1.6
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 keras==3.11.2
+libclang==18.1.1
 Markdown==3.8.2
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
+mkl-service==2.4.0
+mkl_fft==1.3.8
+mkl_random==1.3.1
 ml_dtypes==0.5.3
+mpmath==1.3.0
 munch==4.0.0
+namex==0.1.0
 narwhals==2.1.2
+networkx==3.1
 numpy==2.3.2
 opt_einsum==3.4.0
 optree==0.17.0
@@ -34,29 +47,42 @@ packaging==25.0
 pandas==2.3.1
 Pillow==11.3.0
 pretrainedmodels==0.7.4
-protobuf==6.32.0
+protobuf==5.29.5
 pyarrow==21.0.0
+pycparser==2.21
 pydeck==0.9.1
+Pygments==2.19.2
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0
+referencing==0.36.2
 requests==2.32.5
 rich==14.1.0
 rpds-py==0.27.0
+safetensors==0.6.2
+segmentation-models-pytorch==0.3.3
 six==1.17.0
 smmap==5.0.2
 streamlit==1.48.1
 sympy==1.13.1
 tenacity==9.1.2
 tensorboard==2.19.0
+tensorboard-data-server==0.7.2
 tensorflow==2.19.1
 tensorflow-hub==0.16.1
 tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.1.0
+tf_keras==2.19.0
+timm==0.9.2
 torch==2.5.1
 torchaudio==2.5.1
 torchvision==0.20.1
+tornado==6.5.2
 tqdm==4.67.1
 typing-extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
 Werkzeug==3.1.3
+wrapt==1.17.3
